@@ -1,3 +1,7 @@
+2015-04-16  Christian Groessler  <chris@groessler.org>
+* dc/atari_dc.c: Adapt controller and keyboard detection to new KOS version.
+
+
 2015-04-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * ui.c: Fix a bad cast that resulted in crash when changing display resolution.
 * artifact.c: Remove an invalid cast.
